; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mpr/extr_mpr_table.c_mpr_describe_table.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mpr/extr_mpr_table.c_mpr_describe_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpr_table_lookup = type { i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mpr_describe_table(%struct.mpr_table_lookup* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.mpr_table_lookup*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.mpr_table_lookup* %0, %struct.mpr_table_lookup** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %32, %2
  %8 = load %struct.mpr_table_lookup*, %struct.mpr_table_lookup** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %8, i64 %10
  %12 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %35

15:                                               ; preds = %7
  %16 = load %struct.mpr_table_lookup*, %struct.mpr_table_lookup** %4, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %16, i64 %18
  %20 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %5, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %15
  %25 = load %struct.mpr_table_lookup*, %struct.mpr_table_lookup** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %25, i64 %27
  %29 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  store i8* %30, i8** %3, align 8
  br label %43

31:                                               ; preds = %15
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %6, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %6, align 4
  br label %7

35:                                               ; preds = %7
  %36 = load %struct.mpr_table_lookup*, %struct.mpr_table_lookup** %4, align 8
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %36, i64 %39
  %41 = getelementptr inbounds %struct.mpr_table_lookup, %struct.mpr_table_lookup* %40, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  store i8* %42, i8** %3, align 8
  br label %43

43:                                               ; preds = %35, %24
  %44 = load i8*, i8** %3, align 8
  ret i8* %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
